# plonky2-merkle-trees

./: Cargo.toml  README.md
examples/: EXAMPLES.md  Recursive_proof_walkthrough.md  cube.rs  merkle_proof_example1.rs  merkle_proof_example2.rs  merkle_proof_old.rs  merkle_tiny_tree_proof.rs  pol.rs
merkle_proof_verification/: Cargo.toml
merkle_proof_verification/src/: lib.rs
merkle_proof_verification/src/cube/: mod.rs
merkle_proof_verification/src/merkle_proof_16leaves_example/: mod.rs
merkle_proof_verification/src/merkle_proof_4leaves_example/: mod.rs
merkle_proof_verification/src/merkle_proof_verifer/: mod.rs
merkle_proof_verification/src/merkle_tree_16leaves_exercise1/: mod.rs
merkle_proof_verification/src/polynomial/: mod.rs
merkle_proof_verification/src/simple_merkle_tree/: simple_merkle_tree.rs
src/: lib.rs  main.rs
src/merkle_tree/: mod.rs  simple_merkle_tree.rs
src/mmr/: README.md  common.rs  merkle_mountain_ranges.rs  mmr_plonky2_verifier.rs  mmr_plonky2_verifier_1_recursion.rs  mod.rs  naive_merkle_mountain_ranges.rs  naive_mmr_plonky2_verifier.rs  naive_mmr_plonky2_verifier_1_recursion.rs
src/simple_merkle_tree/: simple_merkle_tree.rs
