[package]
name = "plonky2_merkle_trees"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { git = "https://github.com/polymerdao/plonky2", rev = "90eb96c251cd4b715494321a9641ad19a03e8f28" } # to line up with Polymer tutorial
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
plonky2_util = { version = "0.1.0", default-features = false }
plonky2_field = { version = "0.1.0", default-features = false }
plonky2_sha256 = { git="https://github.com/polymerdao/plonky2-sha256.git"}
sha2 = "0.10"
log = "0.4.14"
env_logger = "0.10.0"
rand = "0.8.5"
