workspace = { members = ["merkle_proof_verification"] }
[package]
name = "plonky2_merkle_trees"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2", rev = "3b21b87d0ab3f8ef4b9ff0b9dd70f8e32f5573f4"}
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
plonky2_util = { version = "0.1.0", default-features = false }
plonky2_field = { version = "0.1.0", default-features = false }
sha2 = "0.10"
log = "0.4.14"
env_logger = "0.10.0"
rand = "0.8.5"
